# neural-automata

./: .gitignore  README.md  automata.ipynb  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml
includes/: models.py  utils.py
models/: disconnected_0  disconnected_10  disconnected_100  disconnected_1000  disconnected_10000  disconnected_10100  disconnected_10200  disconnected_10300  disconnected_10400  disconnected_10500  disconnected_10600  disconnected_10700  disconnected_10800  disconnected_10900  disconnected_110  disconnected_1100  disconnected_11000  disconnected_11100  disconnected_11200  disconnected_11300  disconnected_11400  disconnected_11500  disconnected_11600  disconnected_11700  disconnected_11800  disconnected_11900  disconnected_120  disconnected_1200  disconnected_12000  disconnected_12100  disconnected_12200  disconnected_12300  disconnected_12400  disconnected_12500  disconnected_12600  disconnected_12700  disconnected_12800  disconnected_12900  disconnected_130  disconnected_1300  (+468 more)
notebooks/: 1_divergence.ipynb  1_divergence.md  2_metamorphosis.ipynb  2_metamorphosis.md  2_optimization.ipynb  2_optimization.md  3_optimization.ipynb  3_optimization.md  4_tmux.ipynb  automata.ipynb  automata.md  models.py  utils.py
