[tool.poetry]
name = "neural-automata"
version = "0.1.0"
description = ""
authors = ["Kevin Hu <kevinhuwest@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1"
torch = "^1.6.0"
torchvision = "^0.7.0"
pillow = "^7.2.0"
seaborn = "^0.10.1"
numpy = "^1.19.1"
imageio = "^2.9.0"
imageio_ffmpeg = "^0.4.2"
matplotlib = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
