[tool.poetry]
name = "neural-automata"
version = "0.1.0"
description = ""
authors = ["Kevin Hu <kevinhuwest@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1"
pillow = "^7.2.0"
seaborn = "^0.10.1"
numpy = "^1.19.1"
imageio = "^2.9.0"
imageio_ffmpeg = "^0.4.2"
matplotlib = "^3.3.0"
jupyter = "^1.0.0"
mkl = "^2019.0"
requests = "^2.24.0"
torch = "1.5.1"
torchvision = "0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
